@@ -43,8 +43,8 @@ apply plugin: 'opensearch.rest-resources'
 apply plugin: 'opensearch.rest-test'
 
 opensearchplugin {
-  description 'The HDFS repository plugin adds support for Hadoop Distributed File-System (HDFS) repositories.'
-  classname 'org.opensearch.repositories.hdfs.HdfsPlugin'
+  description = 'The HDFS repository plugin adds support for Hadoop Distributed File-System (HDFS) repositories.'
+  classname = 'org.opensearch.repositories.hdfs.HdfsPlugin'
 }
 
 versions << [
@@ -67,7 +67,7 @@ dependencies {
   api 'org.apache.htrace:htrace-core4:4.2.0-incubating'
   api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
   api 'org.apache.avro:avro:1.12.0'
-  api 'com.google.code.gson:gson:2.11.0'
+  api 'com.google.code.gson:gson:2.12.1'
   runtimeOnly "com.google.guava:guava:${versions.guava}"
   api "commons-logging:commons-logging:${versions.commonslogging}"
   api 'commons-cli:commons-cli:1.9.0'
@@ -76,12 +76,12 @@ dependencies {
   api "org.apache.commons:commons-compress:${versions.commonscompress}"
   api 'org.apache.commons:commons-configuration2:2.11.0'
   api "commons-io:commons-io:${versions.commonsio}"
-  api 'org.apache.commons:commons-lang3:3.15.0'
-  implementation 'com.google.re2j:re2j:1.6'
+  api 'org.apache.commons:commons-lang3:3.17.0'
+  implementation 'com.google.re2j:re2j:1.8'
   api 'javax.servlet:servlet-api:2.5'
   api "org.slf4j:slf4j-api:${versions.slf4j}"
   api "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
-  api 'net.minidev:json-smart:2.5.1'
+  api "net.minidev:json-smart:${versions.json_smart}"
   api "io.netty:netty-all:${versions.netty}"
   implementation "com.fasterxml.woodstox:woodstox-core:${versions.woodstox}"
   implementation 'org.codehaus.woodstox:stax2-api:4.2.2'
@@ -133,11 +133,11 @@ project(':test:fixtures:krb5kdc-fixture').tasks.preProcessFixture {
 
 // Create HDFS File System Testing Fixtures for HA/Secure combinations
 for (String fixtureName : ['hdfsFixture', 'haHdfsFixture', 'secureHdfsFixture', 'secureHaHdfsFixture']) {
-  def tsk = project.tasks.register(fixtureName, org.opensearch.gradle.test.AntFixture) {
-    dependsOn project.configurations.hdfsFixture, project(':test:fixtures:krb5kdc-fixture').tasks.postProcessFixture
+  def tsk = tasks.register(fixtureName, org.opensearch.gradle.test.AntFixture) {
+    dependsOn configurations.hdfsFixture, project(':test:fixtures:krb5kdc-fixture').tasks.postProcessFixture
     executable = "${BuildParams.runtimeJavaHome}/bin/java"
-    env 'CLASSPATH', "${-> project.configurations.hdfsFixture.asPath}"
-    maxWaitInSeconds 60
+    env 'CLASSPATH', "${-> configurations.hdfsFixture.asPath}"
+    maxWaitInSeconds = 60
     onlyIf { BuildParams.inFipsJvm == false }
     waitCondition = { fixture, ant ->
       // the hdfs.MiniHDFS fixture writes the ports file when
@@ -145,6 +145,10 @@ for (String fixtureName : ['hdfsFixture', 'haHdfsFixture', 'secureHdfsFixture', 
       return fixture.portsFile.exists()
     }
     final List<String> miniHDFSArgs = []
+
+    if (BuildParams.runtimeJavaVersion >= JavaVersion.VERSION_23) {
+      miniHDFSArgs.add('-Djava.security.manager=allow')
+    }
 
     // If it's a secure fixture, then depend on Kerberos Fixture and principals + add the krb5conf to the JVM options
     if (fixtureName.equals('secureHdfsFixture') || fixtureName.equals('secureHaHdfsFixture')) {
@@ -183,7 +187,7 @@ Set disabledIntegTestTaskNames = []
 for (String integTestTaskName : ['integTestHa', 'integTestSecure', 'integTestSecureHa']) {
   task "${integTestTaskName}"(type: RestIntegTestTask) {
     description = "Runs rest tests against an opensearch cluster with HDFS."
-    dependsOn(project.bundlePlugin)
+    dependsOn(bundlePlugin)
 
     if (disabledIntegTestTaskNames.contains(integTestTaskName)) {
       enabled = false;
